# zephyr-experiments

./: README.md
CAN_BUS_Demo/: CMakeLists.txt  prj.conf
CAN_BUS_Demo/boards/: frdm_mcxn947.overlay
CAN_BUS_Demo/src/: main.c
CAN_internal_temp/: CMakeLists.txt  can_temp_logger.py  prj.conf  sample.yaml
CAN_internal_temp/boards/: frdm_mcxn947.overlay
CAN_internal_temp/src/: main.c
adc_demo/: CMakeLists.txt
adc_demo/boards/: frdm_mcxn947.overlay
adc_demo/src/: main.c
button_demo/boards/: frdm_mcxn947.overlay
button_demo/src/: main.c
cmake_demo/: CMakeLists.txt
cmake_demo/include/: my_lib.h
cmake_demo/src/: main.c  my_lib.c
device_driver/: prj.conf
device_driver/boards/: frdm_mcxn947.overlay
device_driver/src/: main.c
display_driver/: CMakeLists.txt  prj.conf
display_driver/boards/: frdm_mcxn947.overlay
kconfig_demo/: modules.yml
led_shell/: CMakeLists.txt  prj.conf
led_shell/src/: main.c
led_toggler/: CMakeLists.txt
led_toggler/src/: main.c
multithreading_mutex/boards/: frdm_mcxn947.overlay
multithreading_mutex/src/: main.c
multithreading_test/: CMakeLists.txt
multithreading_test/src/: main.c
sensor_queue/: CMakeLists.txt
sensor_queue/boards/: frdm_mcxn947.overlay
temp_sensor/: CMakeLists.txt
temp_sensor/boards/: frdm_mcxn947.overlay
temp_sensor/src/: main.c
